24 hour caching added, user selected ontologies remembering functionality has been added, added option to select all ontologies

--- a/style.css
+++ b/style.css
@@ -196,3 +196,6 @@
     align-items: center;
     justify-content: center;
 }
+.selectize-dropdown .option[data-value=all_ontologies] {
+    font-weight: bold;
+}
